shadow/istio/expose.yml
---
apiVersion: v1
kind: Service
metadata:
  name: my-cn1
  labels:
    run: my-cn1
spec:
  ports:
  - port: 80
    name: http
  - port: 32111
    targetPort: 32111
    name: prometheus

  selector:
    version: 1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: my-cn2
  labels:
    run: my-cn2
spec:
  ports:
  - port: 80
    name: http
  - port: 32111
    targetPort: 32111
    name: prometheus

  selector:
    version: 2.0.0
