shadow/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - app.com
