shadow/istio/virtualservice-mirror.yml
# Mirror traffic to v2.0.0
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  hosts:
    - app.com
  gateways:
    - my-app
  http:
    - route:
        - destination:
            host: my-cn1
      mirror:
        host: my-cn2
