shadow/istio/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  hosts:
    - app.com
  gateways:
    - my-app
  http:
    - route:
        - destination:
            host: my-cn1
